Render table with data

--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Justin Smith - MET CS601 - Assignment 5</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@400;600&family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>What university degrees do I have?</h1>
-    <button id="button">Click to here to find out</button>
-    <div id="app"></div>
+    <main>
+      <h1>What university degrees do I have?</h1>
+      <button id="button">Click here to find out</button>
+      <div id="content"></div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
